fixed create Button overflow issue

--- a/System.css
+++ b/System.css
@@ -188,7 +188,7 @@ body{
     height: 2rem;
     border-radius: 0.2rem;
     text-align: center;
-    margin: 1rem;
+    margin: 0.2rem;
     border: none;
     color: white;
     background-color: black;
@@ -196,7 +196,7 @@ body{
 
 #progress{
     margin-top: 0.5rem;
-    margin-bottom: 0.12rem;
+    margin-bottom: 0rem;
 }
 
 #close{
